--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 		    <version>2.13.4</version>
 		</dependency>
 		
+		<!-- json simple -->
+		<dependency>
+		  <groupId>com.googlecode.json-simple</groupId>
+		  <artifactId>json-simple</artifactId>
+		  <version>1.1.1</version>
+		</dependency>
+		
 		<!-- commons-fileupload -->
 		<dependency>
 		    <groupId>commons-fileupload</groupId>
